# BreadCrumbs

./: .gitignore  CMakeLists.txt  README.md
apps/BreadCrumbs/: CMakeLists.txt
apps/BreadCrumbs/sample/: device.json
apps/LogGenerator/: CMakeLists.txt
apps/LogGenerator/config/: config.json
apps/LogGenerator/src/: main.cpp
apps/LogGenerator/src/component/: Producer.cpp  Producer.hpp
apps/NetworkTestApp/: CMakeLists.txt
apps/NetworkTestApp/include/: NetworkTestApp.hpp
apps/NetworkTestApp/sample/: client.json  server.json
apps/NetworkTestApp/src/: NetworkTestApp.cpp
apps/cube3d/: CMakeLists.txt
apps/cube3d/include/: AppSettings.hpp  Cube3dComponent.hpp
apps/cube3d/sample/: config.json
apps/cube3d/src/: AppSettings.cpp  Cube3dComponent.cpp  Cube3dComponent_functional.cpp
apps/cubeManager/: CMakeLists.txt
apps/cubeManager/include/: AppSettings.hpp  CubeController.hpp  CubeData.hpp  CubeManager.hpp
apps/cubeManager/sample/: config.json
apps/cubeManager/src/: AppSettings.cpp  CubeController.cpp  CubeData.cpp  CubeManager.cpp
cmake/: externalLibraries.cmake
components/MessageConsumer/src/component/: MessageConsumer.cpp  MessageConsumer.hpp
components/common/: CMakeLists.txt
components/common/include/common/message/type/: LedState.hpp
components/patterns/include/: BoxIt.hpp  LedTest.hpp  Marques.hpp  Random.hpp  SnowFlake.hpp  Waves.hpp
components/patterns/src/: BoxIt.cpp  LedTest.cpp  Marques.cpp  Random.cpp  SnowFlake.cpp  Waves.cpp
core/component/: CMakeLists.txt
core/component/include/: CMakeLists.txt
core/component/include/core/: Component.hpp
core/component/src/: Component.cpp
core/launcher/: CMakeLists.txt
core/launcher/src/: main.cpp
core/logger/: CMakeLists.txt
core/logger/example/: config.json
core/logger/include/core/logger/: LogEntry.hpp  Logger.hpp  event_logger.h
core/logger/src/: event_logger.cpp
core/logger/src/core/logger/impl/: ConsoleLogger.hpp  DetachedLogger.hpp  ErrorLogger.hpp  FileLogger.hpp
core/logger/src/impl/: ConsoleLogger.cpp  DetachedLogger.cpp  ErrorLogger.cpp  FileLogger.cpp
core/utils/: CMakeLists.txt
core/utils/include/core/util/: Attributes.hpp  EnumCast.hpp  Time.hpp  TimeTracker.hpp
core/utils/include/util/graphics/: Color.hpp  Point.hpp  Point3d.hpp
core/utils/include/util/math/: Cube.hpp
core/utils/include/util/network/: Message.hpp
core/utils/src/: Attributes.cpp  EnumCast.cpp  Time.cpp  TimeTracker.cpp
core/utils/test/: CMakeLists.txt
core/utils/test/src/: EnumCastTest.cpp  main.cpp
docker/: Dockerfile
docker/gitinspector/: Dockerfile  README.md
docker/gource/: Dockerfile  Dockerfile.make  README.md  runner.sh
networking/client/: CMakeLists.txt
networking/client/include/: Client.hpp
networking/client/src/: Client.cpp
networking/server/: CMakeLists.txt
networking/server/include/: Server.hpp
networking/server/src/: Server.cpp
